--- a/ios/jedaeroReactNative/Info.plist
+++ b/ios/jedaeroReactNative/Info.plist
@@ -44,6 +44,11 @@
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
+			<key>www.jejunu.ac.kr</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
 			<key>localhost</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
