--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "cheerio-without-node-native": "^0.20.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
-    "react-native-cheerio": "^1.0.0-rc.4",
     "react-native-elements": "^0.19.1",
     "react-native-scaled-image": "0.0.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.9.1",
-    "rn-fetch-blob": "^0.10.12",
-    "stream": "0.0.2"
+    "rn-fetch-blob": "^0.10.12"
   },
   "devDependencies": {
     "babel-jest": "23.4.0",
