--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "iconv-lite": "^0.4.23",
     "react": "16.4.1",
     "react-native": "0.56.0",
-    "react-native-elements": "^0.19.1",
+    "react-native-elements": "^1.0.0-beta5",
     "react-native-scaled-image": "0.0.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.9.1",
