도서 검색 구현중

--- a/ios/jedaeroReactNative/Info.plist
+++ b/ios/jedaeroReactNative/Info.plist
@@ -56,6 +56,11 @@
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
+			<key>lib.jejunu.ac.kr</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
 			<key>dormitory.neo-internet.co.kr</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
