--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "16.5.0",
     "react-native": "0.57.1",
     "react-native-elements": "^1.0.0-beta5",
+    "react-native-paper": "^2.1.3",
     "react-native-scaled-image": "0.0.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.9.1",
+    "react-navigation-material-bottom-tabs": "^0.4.0",
     "rn-fetch-blob": "^0.10.12"
   },
   "devDependencies": {
