--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/runtime": "^7.1.2",
     "buffer": "^5.1.0",
     "cheerio-without-node-native": "^0.20.2",
     "iconv-lite": "^0.4.23",
-    "react": "16.5.0",
+    "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.1",
     "react-native-elements": "^1.0.0-beta5",
     "react-native-paper": "^2.1.3",
@@ -18,7 +19,8 @@
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.9.1",
     "react-navigation-material-bottom-tabs": "^0.4.0",
-    "rn-fetch-blob": "^0.10.12"
+    "rn-fetch-blob": "^0.10.12",
+    "schedule": "0.4.0"
   },
   "devDependencies": {
     "babel-jest": "23.4.0",
