--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/runtime": "^7.1.2",
     "buffer": "^5.1.0",
     "cheerio-without-node-native": "^0.20.2",
+    "chromeless": "^1.5.2",
     "iconv-lite": "^0.4.23",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.1",
@@ -20,7 +21,8 @@
     "react-navigation": "^2.9.1",
     "react-navigation-material-bottom-tabs": "^0.4.0",
     "rn-fetch-blob": "^0.10.12",
-    "schedule": "0.4.0"
+    "schedule": "0.4.0",
+    "util": "^0.11.0"
   },
   "devDependencies": {
     "babel-jest": "23.4.0",
