--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "iconv-lite": "^0.4.23",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.1",
+    "react-native-communications": "^2.2.1",
     "react-native-elements": "^1.0.0-beta5",
     "react-native-paper": "^2.1.3",
     "react-native-scaled-image": "0.0.1",
