--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-jest": "23.4.0",
     "babel-preset-react-native": "5.0.2",
     "jest": "23.4.1",
+    "react-native-pinch": "^0.1.0",
     "react-test-renderer": "16.4.1"
   },
   "jest": {
