--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-communications": "^2.2.1",
     "react-native-elements": "^1.0.0-beta5",
     "react-native-paper": "^2.1.3",
+    "react-native-pinch-zoom-view": "^0.2.0",
     "react-native-scaled-image": "0.0.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.9.1",
