--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-paper": "^2.1.3",
     "react-native-pinch-zoom-view": "^0.2.0",
     "react-native-scaled-image": "0.0.1",
+    "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.9.1",
     "react-navigation-material-bottom-tabs": "^0.4.0",
