--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,12 +137,15 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-video')
     compile project(':react-native-pinch')
     compile project(':rn-fetch-blob')
     compile project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.facebook.fresco:animated-webp:1.10.0'
+    implementation 'com.facebook.fresco:webpsupport:1.10.0'
 }
 
 // Run this once to be able to run the application with BUCK
