--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "chromeless": "^1.5.2",
     "iconv-lite": "^0.4.23",
     "link": "^0.1.5",
-    "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.1",
+    "react": "^16.6.3",
+    "react-native": "^0.58.6",
     "react-native-communications": "^2.2.1",
     "react-native-elements": "^1.0.0-beta5",
     "react-native-paper": "^2.1.3",
