--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "react-native-video": "^4.4.0",
     "react-navigation": "^2.9.1",
     "react-navigation-material-bottom-tabs": "^0.4.0",
-    "rn-fetch-blob": "^0.10.12",
+    "rn-fetch-blob": "^0.10.15",
     "schedule": "0.4.0",
     "util": "^0.11.0"
   },
   "devDependencies": {
-    "babel-jest": "23.4.0",
+    "babel-jest": "^24.4.0",
     "babel-preset-react-native": "5.0.2",
-    "jest": "23.4.1",
+    "jest": "^24.4.0",
     "react-native-pinch": "^0.1.0",
     "react-test-renderer": "16.4.1"
   },
