--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chromeless": "^1.5.2",
     "iconv-lite": "^0.4.23",
     "link": "^0.1.5",
+    "moment": "^2.24.0",
     "react": "^16.6.3",
     "react-native": "^0.58.6",
     "react-native-communications": "^2.2.1",
