--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,6 +139,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-navigation-bar-color')
     implementation project(':rn-fetch-blob')
     implementation project(':react-native-video')
     implementation project(':react-native-vector-icons')
