--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "^0.58.6",
     "react-native-communications": "^2.2.1",
     "react-native-elements": "^1.0.0-beta5",
+    "react-native-navigation-bar-color": "0.0.9",
     "react-native-paper": "^2.1.3",
     "react-native-pinch-zoom-view": "^0.2.0",
     "react-native-scaled-image": "0.0.1",
