--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-native-paper": "^2.1.3",
     "react-native-pinch-zoom-view": "^0.2.0",
     "react-native-scaled-image": "0.0.1",
-    "react-native-swiper": "^1.5.14",
+    "react-native-swiper": "git+https://github.com/rbrbrb7290/react-native-swiper.git",
     "react-native-vector-icons": "^4.6.0",
     "react-native-video": "^4.4.0",
     "react-navigation": "^2.9.1",
