--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -151,6 +151,7 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-navigation-bar-color')
     implementation project(':rn-fetch-blob')
     implementation project(':react-native-video')
