--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.1.2",
+    "@react-native-community/async-storage": "^1.3.0",
     "buffer": "^5.1.0",
     "cheerio-without-node-native": "^0.20.2",
     "chromeless": "^1.5.2",
