--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react-native": "^0.59.4",
     "react-native-communications": "^2.2.1",
     "react-native-elements": "^1.0.0-beta5",
+    "react-native-modal-selector": "^1.0.3",
     "react-native-navigation-bar-color": "0.0.9",
     "react-native-paper": "^2.1.3",
     "react-native-pinch-zoom-view": "^0.2.0",
     "react-native-scaled-image": "0.0.1",
+    "react-native-simple-modal-picker": "^0.1.3",
     "react-native-swiper": "git+https://github.com/rbrbrb7290/react-native-swiper.git",
     "react-native-vector-icons": "^4.6.0",
     "react-native-video": "^4.4.0",
